fix: overlap line spacing at putar lagu

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -294,14 +294,14 @@ body {
   font-family: spotify-circular, Helvetica, Arial, sans-serif;
   font-size: 25px;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 100%;
   letter-spacing: 0.25px;
 }
 
 #container-putar-lagu #penyanyi{
   color:#b3b3b3;
   font-size: 20px;
-  padding: 15px 0 15px 0;
+  padding: 10px 0 10px 0;
 }
 
 #container-putar-lagu audio{
